vlib/v/checker/tests/array_builtin_method_args_err.vv
fn main() {
	arr := [1, 2, 3]

	a1 := arr.clone(22)
	println(a1)

	a2 := arr.first('a2')
	println(a2)

	a3 := arr.last(1)
	println(a3)

	a4 := arr.pop(2)
	println(a4)
}
